Adding Wonderland and Coliseum profile pages

--- a/profiles.html
+++ b/profiles.html
@@ -24,8 +24,10 @@
     <div class="container">
         <img src="images/reports.png"/>
         <ul>              
-            <li> <a href="mainCharacters.html"><h2>Principal Caracters</h2></a></li>
-            <li><a href="traverseCharacters.html"><h2>Traverse Town Caracters</h2></li>
+            <li><a href="mainCharacters.html"><h2>Principal Characters</h2></a></li>
+            <li><a href="traverseCharacters.html"><h2>Traverse Town</h2></a></li>
+            <li><a href="wonderlandCharacters.html"><h2>Wonderland</h2></a></li>
+            <li><a href="ColiseumCharacters.html"><h2>Coliseum</h2></a></li>
           </ul>  
     </div>
     
