Correcting some profiles

--- a/traverseCharacters.html
+++ b/traverseCharacters.html
@@ -84,17 +84,8 @@
             <h2>Merlin</h2>
             <img src="images/merlin.png" title="source: imgur.com" width=200/>
             <h2>
-              <p>Cloud first makes his appearance in the Olympus Coliseum, 
-              striking a deal with Hades: if Cloud eliminates Hercules in battle, 
-              Hades will lead him to his nemesis Sephiroth. 
+              <p>Merlin appears in traverse town, he makes possible travel to Hundred Acre World, besides teach and train some of Sora's spells.
             </p>
-
-            <p>
-              However, 
-              Cloud also has to fight Sora, so that he may move on to Hercules 
-              in the preliminaries rankings. After their battle, Cloud is either defeated, 
-              or comes out victorious, but refrains from killing Sora. </p></h2>
-
           </div>
           
           <div>
@@ -103,17 +94,8 @@
             <img src="images/fifi.png" title="source: imgur.com" width=150/>
             <img src="images/ducks.png" title="source: imgur.com" width=200/>
             <h2>
-              <p>Cloud first makes his appearance in the Olympus Coliseum, 
-              striking a deal with Hades: if Cloud eliminates Hercules in battle, 
-              Hades will lead him to his nemesis Sephiroth. 
+              <p>Huey, Dewey e Louie are sellers guys, they stay in the first district selling potions and consumable itens.
             </p>
-
-            <p>
-              However, 
-              Cloud also has to fight Sora, so that he may move on to Hercules 
-              in the preliminaries rankings. After their battle, Cloud is either defeated, 
-              or comes out victorious, but refrains from killing Sora. </p></h2>
-
           </div>
     </div>
     
